# fastapi-exercise

./: .gitignore  README.md  gunicorn.conf.py  pyproject.toml
app/: config.py  configure_logging.py  main.py  schemas.py
app/apis/: __init__.py  user.py
app/controllers/: __init__.py  post.py  user.py
app/database/: config.py  models.py
app/exceptions/: configure_exceptions.py  handle_exceptions.py
app/middlewares/: __init__.py
app/utils/: authentication.py
deployments/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 0405a599f53e_update_post.py  0de0e31fffb3_update_user.py  140674aea259_init_users.py  f8d3dc64f0e1_create_post.py
